# cosmosapien-cli

./: .cosmosrc.example  .coverage  Dockerfile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
cosmosapien/: __init__.py
cosmosapien/auth/: __init__.py  manager.py
cosmosapien/cli/: __init__.py  cosmic_ui.py  main.py
cosmosapien/core/: __init__.py  agent_system.py  config.py  job_distributor.py  local_manager.py  model_library.py  models.py  provider_info.py  router.py  smart_router.py
cosmosapien/memory/: __init__.py  manager.py
cosmosapien/models/: __init__.py  claude_model.py  gemini_model.py  grok_model.py  huggingface_model.py  llama_model.py  openai_model.py  perplexity_model.py
cosmosapien/plugins/: __init__.py  manager.py
cosmosapien/visual/: __init__.py  generator.py
docs/: README.md
