[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmosapien-cli"
version = "0.1.0"
description = "A modular command-line tool for interacting with multiple LLM providers"
authors = [
    {name = "Cosmosapien CLI Team", email = "dev@cosmosapien.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["cli", "llm", "ai", "openai", "gemini", "claude", "perplexity", "llama"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "keyring>=24.0.0",
    "pathlib2>=2.3.7; python_version < '3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cosmo = "cosmosapien.cli.main:app"

[project.urls]
Homepage = "https://github.com/cosmosapien/cli"
Repository = "https://github.com/cosmosapien/cli"
Issues = "https://github.com/cosmosapien/cli/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cosmosapien --cov-report=term-missing --cov-report=html" 